cmake_minimum_required(VERSION 3.27)
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled main.cpp
        thing/diamond_collector.cpp
        subarray_sums_2.cpp
        subarray_divis.cpp
        max_sub_sum.cpp
        nusret.cpp
        nurke.cpp
        thing/painting_barn_gold.cpp
        out_of_sorts.cpp
        cell_network.cpp
        quiz_master.cpp
        diamond_collector.cpp
        bit_inversions.cpp
        concert_tickets.cpp
        traffic_lights.cpp
        room_alloc.cpp
        thing/convention_2.cpp
        snowboots.cpp
        packing_regulations.cpp
        survival.cpp
        studying_algos.cpp
        movie_festival.cpp
        tasks_deadlines.cpp
        towers.cpp
        movie_festival_ii.cpp
        thing/high_low_gold.cpp
        cow_cross_road.cpp
        closest_cow_wins.cpp
        bovine_academics.cpp
        cycle_corr.cpp
        target_prac.cpp
        bin_search_cf.cpp
        max_median.cpp
        counting_haybales.cpp
        cow_dance_show.cpp
        social_distance.cpp
        angry_cows.cpp
        loan_repayment.cpp
        array_division.cpp
        magic_ship.cpp
        meeting_place.cpp
        max_median_2.cpp
        minizing_difference.cpp
        moocast.cpp
        fence_painting.cpp
        closing_farm.cpp
        flight_routes.cpp
        redistrobuting_gifts.cpp
        conn_components.cpp
        revegetation.cpp
        revegetation.cpp
        bipartness.cpp
        among_us.cpp
        counting_room.cpp
        icy_perimeter.cpp
        xc_skiing.cpp
        build_gates.cpp
        where_bessie.cpp
        cow_cross_road_iii.cpp
        maze_tac_toe.cpp
        subordinates.cpp
        mootube.cpp
        milkvisits.cpp
        family_tree.cpp
        tree_diameter.cpp
        tree_distances_i.cpp
        clock_tree.cpp
        even_outdegree_edges.cpp
        coopertive_game.cpp
        badge.cpp
        planets_cycles.cpp
        bovine_shuffle.cpp
        graph.cpp
        comfortable_cows.cpp
        take_a_guess.cpp
        xor_pyramid.cpp
        three_days_ago.cpp
        data_structures_fan.cpp
        searching.cpp
        field_day.cpp
        prime_multiples.cpp
        Sheikh.cpp
        handshake.cpp
        barn_tree.cpp
        cirular_barn.cpp
        range_reconstuction.cpp
        milk3.cpp
        number_triangles.cpp
        prime_palendromes.cpp
        closest_cow_wins.cpp
        connecting_two_barns.cpp
        connecting_two_barns.cpp
        convoluted_intervals.cpp
        counting_divisors.cpp
        div_game.cpp
        power_products.cpp
        common_divisors.cpp
        "maximum of GCDs.cpp"
        cowntagion.cpp
        rectangular_pasture.cpp
        stuck_in_a_rut.cpp
        exponentiation.cpp
        exponentiation_ii.cpp
        divisor_analysis.cpp
        bin_coff.cpp
        montmort_number.cpp
        marbles.cpp
        candy_lottery.cpp
        creating_string_ii.cpp
        find_and_replace.cpp
        following_directions.cpp
        moo_route.cpp
        almost_id_permuations.cpp
        just_stalling.cpp
        moo_route_gold.cpp
        cowpatibility.cpp
        help_yourself.cpp
        cow_camp.cpp
        frog_1.cpp
        mortal_kombat_tower.cpp
        hoof_paper_scissors.cpp
        time_is_mooney.cpp
)
