cmake_minimum_required(VERSION 3.27)
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled
        thing/diamond_collector.cpp
        subarray_sums_2.cpp
        subarray_divis.cpp
        max_sub_sum.cpp
        nusret.cpp
        nurke.cpp
        thing/painting_barn_gold.cpp
        out_of_sorts.cpp
        cell_network.cpp
        quiz_master.cpp
        diamond_collector.cpp
        bit_inversions.cpp
        concert_tickets.cpp
        traffic_lights.cpp
        room_alloc.cpp
        thing/convention_2.cpp
        snowboots.cpp
        packing_regulations.cpp
        survival.cpp
        studying_algos.cpp
        movie_festival.cpp
        tasks_deadlines.cpp
        towers.cpp
        movie_festival_ii.cpp
        thing/high_low_gold.cpp
        cow_cross_road.cpp
        closest_cow_wins.cpp
        bovine_academics.cpp
        cycle_corr.cpp
        target_prac.cpp
        bin_search_cf.cpp
        max_median.cpp
        counting_haybales.cpp
        cow_dance_show.cpp
        social_distance.cpp
        angry_cows.cpp
        loan_repayment.cpp
        array_division.cpp
        magic_ship.cpp
        meeting_place.cpp
        max_median_2.cpp
        minizing_difference.cpp
        moocast.cpp
        fence_painting.cpp
        closing_farm.cpp
        flight_routes.cpp
        redistrobuting_gifts.cpp
        conn_components.cpp
        revegetation.cpp
        revegetation.cpp
        bipartness.cpp
        among_us.cpp
        counting_room.cpp
        icy_perimeter.cpp
        xc_skiing.cpp
        build_gates.cpp
        where_bessie.cpp
        cow_cross_road_iii.cpp
        maze_tac_toe.cpp
        subordinates.cpp
        mootube.cpp
        milkvisits.cpp
        family_tree.cpp
        tree_diameter.cpp
        tree_distances_i.cpp
        clock_tree.cpp
        even_outdegree_edges.cpp
        coopertive_game.cpp
        badge.cpp
        planets_cycles.cpp
        bovine_shuffle.cpp
        graph.cpp
        comfortable_cows.cpp
        take_a_guess.cpp
        xor_pyramid.cpp
        three_days_ago.cpp
        data_structures_fan.cpp
        searching.cpp
        field_day.cpp
        prime_multiples.cpp
        Sheikh.cpp
        handshake.cpp
        barn_tree.cpp
        cirular_barn.cpp
        range_reconstuction.cpp
        milk3.cpp
        number_triangles.cpp
        prime_palendromes.cpp
        closest_cow_wins.cpp
        connecting_two_barns.cpp
        connecting_two_barns.cpp
        convoluted_intervals.cpp
        counting_divisors.cpp
        div_game.cpp
        power_products.cpp
        common_divisors.cpp
        "maximum of GCDs.cpp"
        cowntagion.cpp
        rectangular_pasture.cpp
        stuck_in_a_rut.cpp
        exponentiation.cpp
        exponentiation_ii.cpp
        divisor_analysis.cpp
        bin_coff.cpp
        montmort_number.cpp
        marbles.cpp
        candy_lottery.cpp
        creating_string_ii.cpp
        find_and_replace.cpp
        following_directions.cpp
        moo_route.cpp
        almost_id_permuations.cpp
        just_stalling.cpp
        moo_route_gold.cpp
        cowpatibility.cpp
        help_yourself.cpp
        cow_camp.cpp
        frog_1.cpp
        mortal_kombat_tower.cpp
        hoof_paper_scissors.cpp
        time_is_mooney.cpp
        snakes.cpp
        circular_barn_revisited.cpp
        taming_the_herd.cpp
        moortal_cowmbat.cpp
        dice_combinations.cpp
        minimizing_coins.cpp
        coin_combos.cpp
        dance_hooves.cpp
        no_time_to_paint.cpp
        spaced_out.cpp
        coin_combos_ii.cpp
        subset_sum_quiers.cpp
        two_sets_ii.cpp
        fruit_feast.cpp
        talent_show.cpp
        cow_poetry.cpp
        target_practice.cpp
        test_tubes.cpp
        moorbles.cpp
        exercise.cpp
        longest_common_sub.cpp
        edit_distance.cpp
        cow_checklist.cpp
        radio_contact.cpp
        cow_cross_road_ii.cpp
        hamiltonian_flights.cpp
        uddered_but_not_herd.cpp
        lights_off.cpp
        burza.cpp
        redisto_gifts.cpp
        flight_routes_gold.cpp
        min_longest_trip.cpp
        haybale_distribution.cpp
        space_jazz.cpp
        248.cpp
        modern_art_3.cpp
        3sum_usaco.cpp
        greedy_pie_eaters.cpp
        rest_stops.cpp
        snow_boots.cpp
        teleportation.cpp
        odometer.cpp
        digit_sum.cpp
        piling_papers.cpp
        message_route.cpp
        visits.cpp
        subset_equality.cpp
        subset_equality.cpp
        tracks_in_the_snow.cpp
        labyrinth.cpp
        graph_girth.cpp
        lasers_and_mirrors.cpp
        bribing_friends.cpp
        mountians.cpp
        strongest_friendship_group.cpp
        consturct_a_palindrome.cpp
        paired_up.cpp
        HILO.cpp
        bracelet_crossings.cpp
        mootube_gold.cpp
        moocast_gold.cpp
        course_schedule.cpp
        round_trip_ii.cpp
        longest_flight_route.cpp
        game_routes.cpp
        quantum_superposition.cpp
        timeline.cpp
        milking_order.cpp
        problem_1.cpp
        problem_2.cpp
        problem_3.cpp
        problem_4.cpp
        replication.cpp
        bovine_genetics.cpp
        square_pasture.cpp
        shortest_routes_ii.cpp
        shortest_routes_i.cpp
        milk_pumping.cpp
        cow_cross_road_gold.cpp
        investigation.cpp
        commuter_pass.cpp
        road_reparation.cpp
        fenced_in.cpp
        pie_for_pie.cpp
        barn_painting.cpp
        haybale_feast.cpp
        walk_500_miles.cpp
        moo_network.cpp
        portals.cpp
        max_subarray_sum_ii.cpp
        sliding_window_median.cpp
        playlist.cpp
        dynamic_range_min_queries.cpp
        convention.cpp
        milk_measurement.cpp
        mooyo_mooyo.cpp
        dynamic_range_sum_queries.cpp
        inversion_counting.cpp
        range_update_quiers.cpp
        distinct_values_queries.cpp
        haircut.cpp
        sleepy_cow_sort.cpp
        subtree_queries.cpp
        company_queries_ii.cpp
        distance_queries.cpp
        bessies_interview.cpp
        painting_fence_posts.cpp
        the_winning_gene.cpp
        cow_land.cpp
        milk_visits.cpp
        tree_matching.cpp
        moo_buzz.cpp
        meetings.cpp
        cow_ate_homework.cpp
        email_filing.cpp
        cycle_correspondense.cpp
        problem_1.cpp
        problem_2.cpp
        problem_3.cpp
        three_strings.cpp
        bowling_frame.cpp
        maximize_mex.cpp
        swap_cols_find_path.cpp
        brightness_begins.cpp
        cake_game.cpp
        deforestation.cpp
        strict_teacher.cpp
        cownpetency.cpp
        digital_string_max.cpp
        cowlendar.cpp
        digital_string_max.cpp
        insane_problem.cpp
        bento_box_adventure.cpp
        sharky_surfing.cpp
        i_love_1543.cpp
        bakery.cpp
        robot_instructions.cpp
        cereal_2.cpp
        correct_cereal_2.cpp
        pspspsps.cpp
        bridge_renovation.cpp
        DIY.cpp
        sakurako_kosuke_permutation.cpp
)
